--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -9,6 +9,7 @@
   % \usepackage{caption}
   \usepackage{subcaption}
   \usepackage{tikz,pgfplots,pgfplotstable}
+  \usepackage{mathtools}
   \usepgfplotslibrary{statistics}
 \else
 \fi
@@ -100,8 +101,8 @@ We selected the WordPress REST API V2 for this study. WordPress is a blog-like o
 The WordPress REST API V2 has been published and maintained since May 2015. Before January 2017, the WordPress REST API V2 was distributed as a plug-in where WordPress users could optionally install the API component. The following statistics are for the plug-in installation numbers between May 2015 and October 2016:\footnote{\url{https://wordpress.org/plugins/rest-api/stats/}}
 
 \begin{itemize}
-  \item Total installations: ~248K installs of the plug-in.
-  \item Average daily installations: ~500.
+  \item Total installations: $ \approx 248K$ installs of the plug-in.
+  \item Average daily installations: $ \approx 500$.
 \end{itemize}
 
 Starting January 2017, the WordPress REST API V2 is no longer required to be installed as a separate plug-in since it's bundled with every WordPress installation. According to the code repository on GitHub, there are a total of 99 and 46 contributors that had at least one commit to the code repository of the API and its documentation, respectively. These properties satisfy R1, our requirements for using a representative API. By selecting an open-source project we are able to access the source-code to inspect the implementation and documentation technique of the WordPress REST API. The API implements a self-documenting feature where API developers expose API endpoints over HTTP OPTIONS verb to explain the API elements. To implement this feature, the API developers describe the API elements in the code. For example:
