make it clear that the results were suprising

--- a/controlled_study.tex
+++ b/controlled_study.tex
@@ -360,7 +360,7 @@ AverageTrialAPICall(task, group) = Total number of API calls made by group on ta
 
 SuccessRate(task, group) = Number of participants that correctly completed task / Number of participants in group
 
-In Figure \ref{graph:productivity} and  \ref{graph:time} we see that, for the simpler tasks T2 and T3, G1 had used more trial API calls and more time on average and reached successful answers with a lower percentage compared to G2. For T4, where the participants are required to inspect an HTTP response header, G2 needed more API calls on average, but also yielded 24\% higher success rate. For the more complicated tasks T5 and T6, we see that participants in G1 had very low success rate and very high number of average API trials compared to G2. The data here clearly depicts that without usage examples REST API client developers spend more time and require more trial and error attempts yet resulting in lower success rates, and the situation gets worse for relatively complicated tasks.
+Even though we expected G2 to outperform G1, we were surprised to see the difference in effort vs. success of the two groups. In Figure \ref{graph:productivity} and \ref{graph:time} we see that, for the simpler tasks, T2 and T3, G1 required more time and more trial API calls and reached successful answers with a lower percentage compared to G2. For T4, where the participants are required to inspect an HTTP response header, G2 needed more API calls on average, but also yielded 24\% higher success rate. For the more complex tasks T5 and T6, we see that participants in G1 had very low success rate and very high number of average API trials compared to G2. The data here depicts that without usage examples developers spend more time and require more trial and error attempts yet resulting in lower success rates, and the situation gets worse for relatively complicated tasks.
 
 \begin{figure}[h]
 \centering
